<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:background="@color/black"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/loadingError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/empty_category"
        android:src="@drawable/ic_baseline_cloud_off_24"/>

    <TextView
        android:id="@+id/error_desctiption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loadingError"
        android:text="@string/error_layout_text"
        android:gravity="center"
        android:textSize="@dimen/description_text_size"/>

    <TextView
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_desctiption"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/textTopMargin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/retry_button"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

</RelativeLayout>
