<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/elevation_and_radius"
        app:cardElevation="@dimen/elevation_and_radius"
        tools:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonsTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/gifimage"
            android:cropToPadding="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/imageDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_background"
            android:padding="@dimen/text_padding"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/description_text_size"
            tools:ignore="RtlCompat" />

        <include
            layout="@layout/empty_category"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/error_layout"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            layout="@layout/loading_layout"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nextButton"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/fab_top_margin"
        android:contentDescription="@string/next_button"
        android:src="@drawable/forward_button"
        app:backgroundTint="@color/gray"
        app:fabCustomSize="@dimen/fab_size"
        app:borderWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/previousButton"
        app:layout_constraintTop_toBottomOf="@id/imageLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/previousButton"
        android:layout_width="@dimen/fab_size"
        android:layout_height="@dimen/fab_size"
        android:layout_marginTop="@dimen/fab_top_margin"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/previous_button"
        android:src="@drawable/previous_button"
        app:backgroundTint="@color/gray"
        app:fabCustomSize="@dimen/fab_size"
        app:borderWidth="@dimen/fab_border_width"
        app:layout_constraintEnd_toStartOf="@id/nextButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>
